@@ -177,8 +177,9 @@
 (define (spawn-editor location)
   (let* ((file-name (car location))
 	 (line (cadr location))
-	 (column (caddr location))
-	 (command (get-editor-command file line column)))
+	 (char (caddr location))
+	 (column (cadddr location))
+	 (command (get-editor-command file line char column)))
     (debugf "spawning: ~s\n" command)
     (if (= (primitive-fork) 0)
 	(let ((command-list (string-split command #\ )));; (get-ifs))))
